// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddNavButtons function adds 4 buttons to navbuttons element 1`] = `
<button
  class="mdl-shadow--8dp mdl-button mdl-js-button mdl-color--blue-grey-700 mdl-color-text--white mdl-button--fab mdl-js-ripple-effect"
>
  <i
    class="material-icons"
  >
    navigate_before
  </i>
</button>
`;

exports[`AddNavButtons function adds 4 buttons to navbuttons element 2`] = `
<button
  class="mdl-shadow--8dp mdl-button mdl-js-button mdl-color--blue-grey-700 mdl-color-text--white mdl-button--fab mdl-js-ripple-effect"
>
  <i
    class="material-icons"
  >
    home
  </i>
</button>
`;

exports[`AddNavButtons function adds 4 buttons to navbuttons element 3`] = `
<button
  class="mdl-shadow--8dp mdl-button mdl-js-button mdl-color--blue-grey-700 mdl-color-text--white mdl-button--fab mdl-js-ripple-effect"
>
  <i
    class="material-icons"
  >
    refresh
  </i>
</button>
`;

exports[`AddNavButtons function adds 4 buttons to navbuttons element 4`] = `
<button
  class="mdl-shadow--8dp mdl-button mdl-js-button mdl-color--blue-grey-700 mdl-color-text--white mdl-button--fab mdl-js-ripple-effect"
>
  <i
    class="material-icons"
  >
    navigate_next
  </i>
</button>
`;
